<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reletiveLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/activity_household"
    android:background="@color/colorbg">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/hold">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/general_information"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:text="@string/state" />

        <Spinner
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_toEndOf="@+id/textView3"
            android:layout_toRightOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="53dp"
            android:text="@string/lga" />

        <Spinner
            android:id="@+id/lga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/state"
            android:layout_alignStart="@+id/state"
            android:layout_below="@+id/state" />

        <TextView
            android:id="@+id/genhouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lga"
            android:gravity="center"
            android:text="@string/gender_of_household_head" />

    <TextView
        android:id="@+id/beforeinsurgent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/genhouse"
        android:text="@string/berfore_insurgent" />

    <TextView
        android:id="@+id/afterinsurgent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/genhouse"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:text="AFTER INSURGENT" />
</RelativeLayout>

    <include
        layout="@layout/mygrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hold" />

</RelativeLayout>



